# Jangada

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_QUALITY_QUICK_START.md  CREDITS  Kconfig  Makefile  README.md
Jangada-Demo/: README.md
Jangada-Demo/hello_world/: Makefile
Jangada-Docs/: overview.md
Jangada-LibC/: Makefile
Jangada-LibC/include/: string.h
Jangada-RTOS/: Makefile
arch/: Kconfig
arch/aarch64/: CMakeLists.txt  Makefile  module.mk  startup.S
arch/arm/: Makefile  module.mk
arch/i386/: boot.S  module.mk
boards/: Kconfig
boards/qemu_virt/: CMakeLists.txt  linker.ld
bsps/aarch64/: Makefile
cmake/: JangadaConfig.cmake
cmake/toolchain/: aarch64-none-elf.cmake
config/: default.config  helpers.global  make.global  make.mk  run.global  submake.global  submake.mk  triplet.global
config/toolchains/: Kconfig  aarch64-none-elf.mk  native.mk
demo/hello_world/: Makefile
docs/: ARCHITECTURE.md  BUILD_SYSTEM.md  CODE_QUALITY.md  CONTRIBUTING.md  DRIVERS.md  GETTING_STARTED.md  architecture.md  build.md  index.md  jangada_structure.md  using_jangada.md
drivers/: Makefile
drivers/tty/: Makefile  tty.c  tty_pl011.c  tty_pl011.h
drivers/uart/: module.mk  pl011.c  pl011.h
examples/: Kconfig
include/: device.h  driver.h  registry.h
init/: Makefile  main.c  module.mk
kernel/: Makefile  README.md  driver.c  main.c  module.mk  registry.c  scheduler.c  scheduler.h  task.c
lib/: Makefile
libc/: Makefile
make/: Makefile.globals  Makefile.helpers  Makefile.rules  globals.mk  rules.mk
scripts/: run.sh
(+55 files in other folders)
